--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@master
 
       - name: install dependencies
-        run: npm install && npm install -g firebase-tools
+        run: npm install --global yarn firebase-tools && yarn
 
       - name: Run build
         run: npm run build
