--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bulma-tooltip": "3.0.2",
     "classnames": "2.3.1",
     "compressorjs": "1.1.1",
-    "connected-react-router": "6.8.0",
+    "connected-react-router": "^6.9.2",
     "firebase": "8.10.1",
     "formik": "2.2.9",
     "gh-pages": "3.2.3",
