feat(web-app): Homepage, course, view course detail

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "resize-observer-polyfill": "1.5.1",
     "sass": "1.32.13",
     "shortid": "2.2.16",
+    "styled-components": "^5.3.5",
     "typesafe-actions": "5.1.0",
     "typescript": "4.6.3",
     "url-join": "4.0.1",
@@ -91,29 +92,29 @@
     "@commitlint/cli": "14.1.0",
     "@commitlint/config-conventional": "14.1.0",
     "@types/classnames": "2.3.1",
+    "@types/history": "4.7.0",
     "@types/jest": "26.0.24",
     "@types/lodash": "4.14.180",
-    "@types/qs": "6.9.7",
-    "@types/react-content-loader": "4.0.0",
-    "@types/react-lazyload": "3.2.0",
-    "@types/shortid": "0.0.29",
-    "@types/url-join": "4.0.1",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
-    "@types/history": "4.7.0",
     "@types/mui-datatables": "3.7.8",
     "@types/node": "14.18.12",
+    "@types/qs": "6.9.7",
     "@types/react": "17.0.43",
     "@types/react-collapsible": "2.3.1",
+    "@types/react-content-loader": "4.0.0",
     "@types/react-datepicker": "4.3.4",
     "@types/react-dom": "17.0.14",
     "@types/react-icons": "3.0.0",
+    "@types/react-lazyload": "3.2.0",
     "@types/react-phone-number-input": "3.0.13",
     "@types/react-redux": "7.1.23",
     "@types/react-router-dom": "5.3.3",
     "@types/react-select": "4.0.18",
     "@types/redux-saga": "0.10.5",
+    "@types/shortid": "0.0.29",
+    "@types/url-join": "4.0.1",
     "@types/yup": "0.29.13",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
     "babel-eslint": "10.1.0",
     "dotenv": "8.6.0",
     "eslint": "7.32.0",
