--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,14 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "editor.tabSize": 2,
-  "cSpell.words": ["commitlint", "cafesang", "Toastify", "toastify", "formik", "mui-datatables", "datepicker"]
+  "cSpell.words": [
+    "commitlint",
+    "cafesang",
+    "Toastify",
+    "toastify",
+    "formik",
+    "mui-datatables",
+    "datepicker",
+    "webadmin"
+  ]
 }
